2002-01-10  Glynn Foster  <glynn.foster@sun.com>

	* main.c, panel-widget.c, panel.c, panel.h, session.c, session.h:
	More namespacing. I will do real work soon honest.

2002-01-09  Glynn Foster  <glynn.foster@sun.com>

	* basep-widget.c: Use #defines for panel speed for convenience
	* gnome-panel-properties.c: Fix animation speeds [hopefully].
	* panel-types.h: Change order of PanelSpeed enum.
	* main.c, panel.c, panel.h, session.c, session.h: Start to order
	some stuff around for proper namespacing. 
	I'm 99.99% sure that this builds...because I looked dumb the last 
	time [thanks Darin!].

2002-01-09  Darin Adler  <darin@bentspoon.com>

	* menu.c: Another include of conditional.h

2002-01-09  Darin Adler  <darin@bentspoon.com>

	* main.c: Remove include of conditional.h

2002-01-09  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Remove building of conditional.[ch]
	* conditional.c, conditional.h: Kill Kill Kill!!
	* menu.c: ifdef out, hasn't been implemented using gconf yet
	* main.c, panel-gconf.c, panel-util.c, session.c: Move stuff around 
	a little bit to remove as much cruft from main ()
	* panel-util.c: Add some of the useful [possibly] batter stuff from 
	conditional.[ch]

2002-01-09  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet-frame.c:
	(panel_applet_frame_change_background_pixmap): implement new
	"pixmap:xid,x,y" format.

	* panel.c: (back_change): upd.

2002-01-09  Alexander Larsson  <alla@lysator.liu.se>

	* button-widget.[ch]:
	Make it a normal widget that exposes using
	gdk_pixbuf_render_to_drawable_alpha ().

	* panel-widget.[ch]:
	Override signals instead of connecting to them.
	Remove lots of code that handled button-widgets.
	Expose like normal Gtk widgets.
	Remove no_window_applet_list, as it's not needed anymore.
	
2002-01-08  Glynn Foster  <glynn.foster@sun.com>

	* AUTHORS: Adding Mark and myself.

2002-01-08  Glynn Foster  <glynn.foster@sun.com>

	* gnome-panel-properties.c: Fix up to reflect the user intuitive