@@ -1,98 +1,0 @@
-
-[Applet_1]
-id=Menu
-parameters=.
-main_menu_flags=-1
-global_main=true
-old_style_main=false
-custom_icon=false
-custom_icon_file=
-position=0
-panel=0
-unique_panel_id=10000001
-right_stick=false
-
-[Applet_2]
-Conditional=screen_width >= 640
-id=Launcher
-parameters=gnome/apps/gnome-help.desktop
-position=12
-panel=0
-unique_panel_id=10000001
-right_stick=false
-
-[Applet_3]
-Conditional=screen_width >= 640
-id=Launcher
-parameters=gnome/apps/System/gnome-terminal.desktop
-position=13
-panel=0
-unique_panel_id=10000001
-right_stick=false
-
-[Applet_4]
-Conditional=screen_width >= 640
-id=Launcher
-parameters=gnome/apps/Settings/gnomecc.desktop
-position=14
-panel=0
-unique_panel_id=10000001
-right_stick=false
-
-[Applet_5]
-Conditional=screen_width >= 640
-id=Launcher
-parameters:Conditional={exists '/etc/X11/applnk/Internet/mozilla.desktop'}/etc/X11/applnk/Internet/mozilla.desktop{exists 'gnome/apps/Internet/mozilla.desktop'}gnome/apps/Internet/mozilla.desktop{exists 'gnome/apps/Internet/Mozilla.desktop'}gnome/apps/Internet/Mozilla.desktop{true}gnome/apps/Internet/Netscape.desktop
-position=15
-panel=0
-unique_panel_id=10000001
-right_stick=false
-
-[Applet_6]
-id=Extern
-goad_id=tasklist_applet
-position=1000
-panel=0
-unique_panel_id=10000001
-right_stick=true
-
-[Applet_7]
-Conditional=screen_width >= 640
-id=Extern
-goad_id=fish_applet
-position=1001
-panel=0
-unique_panel_id=10000001
-right_stick=true
-
-[Applet_8]
-id=Status
-position=1002
-panel=0
-unique_panel_id=10000001
-right_stick=true
-
-[Applet_9]
-id=Extern
-goad_id=deskguide_applet
-position=1000
-panel=1
-unique_panel_id=10000002
-right_stick=true
-
-[Applet_10]
-id=Extern
-goad_id=gen_util_mailcheck
-position=1001
-panel=1
-unique_panel_id=10000002
-right_stick=true
-
-[Applet_11]
-Conditional=have battery
-id=Extern
-goad_id=battery_applet
-position=1002
-panel=1
-unique_panel_id=10000002
-right_stick=true
