@@ -1,5 +1,10 @@
 2002-01-10  Glynn Foster  <glynn.foster@sun.com>
 
+	* Makefile.am, main.c, panel.c, session.c: Remove old cruft that 
+	that was added during the war years. We don't need it now.
+
+2002-01-10  Glynn Foster  <glynn.foster@sun.com>
+
 	* main.c, panel-widget.c, panel.c, panel.h, session.c, session.h:
 	More namespacing. I will do real work soon honest.
 
